--- a/inst/markdown/snowcrab_presentation_assessment.rmd
+++ b/inst/markdown/snowcrab_presentation_assessment.rmd
@@ -893,17 +893,16 @@ include_graphics(c(fn1, fn2, fn3) )
  
 ## Fishery Model Summary ...  {.c}
 
-| . | NENS | SENS | 4X^* |  
+|   | NENS | SENS | 4X |  
 |----- | ----- | ----- | ----- |
-|Biomass^+ (`r year.assessment`)|`r round(B_north[t0], 2)` t | `r round(B_south[t0], 2)` t | `r round(B_4x[t0], 2)` t |
-|Biomass^+ (`r year_previous`) | `r round(B_north[t1], 2)` t | `r round(B_south[t1], 2)` t | `r round(B_4x[t1], 2)` t |
-|----- | ----- | ----- | ----- |
-|Fishing Mortality (`r year.assessment`) |`r round(FM_north[t0],3)` |`r round(FM_south[t0],3)` | `r round(FM_4x[t0],3)` |
-|Fishing Mortality (`r year_previous`)   |`r round(FM_north[t1],3)` |`r round(FM_south[t1],3)` | `r round(FM_4x[t1],3)` |
+| |  |  |  |
+|q       | `r round(q_north, 3)` (`r round(q_north_sd, 3)`) | `r round(q_south, 3)` (`r round(q_south_sd, 3)`) | `r round(q_4x, 3)` (`r round(q_4x_sd, 3)`) |
+|r       | `r round(r_north, 3)` (`r round(r_north_sd, 3)`) | `r round(r_south, 3)` (`r round(r_south_sd, 3)`) | `r round(r_4x, 3)` (`r round(r_4x_sd, 3)`) |
+|K       | `r round(K_north, 2)` (`r round(K_north_sd, 2)`) | `r round(K_south, 2)` (`r round(K_south_sd, 2)`) | `r round(K_4x, 2)` (`r round(K_4x_sd, 2)`) |
+|Prefishery Biomass   | `r round(B_north[t0], 2)` (`r round(B_north_sd[t0], 2)`) | `r round(B_south[t0], 2)`  (`r round(B_south_sd[t0], 2)`) | `r round(B_4x[t0], 2)`  (`r round(B_4x_sd[t0], 2)`)  |
+|Fishing Mortality    | `r round(FM_north[t0], 3)` (`r round(FM_north_sd[t0], 3)`) | `r round(FM_south[t0], 3)` (`r round(FM_south_sd[t0], 3)`) | `r round(FM_4x[t0], 3)` (`r round(FM_4x_sd[t0], 3)`) |
 
-+ Prefishery biomass (t)
-* Year refers to starting season
-   
+
 
 
 <!--
